welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: '(' expected but identifier found.
      if num(i+1) > num(i) nb = nb+1
         ^island:8: error: illegal start of simple expression
    }
    ^